--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -29,7 +29,7 @@
   </head>
 
   <body  class="{% block mission-class %}{%endblock%}">
-
+      <div id="page-wrapper">
       <header>
       {% block menubar %}
       <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -61,6 +61,9 @@
       </a>
       <a class="navbar-item" href="/game/" id="missions-menu-item">
         {% trans "Game" %}
+      </a>
+      <a class="navbar-item" href="/network">
+        {% trans "Telescopes" %}
       </a>
     </div>
 
@@ -102,7 +105,7 @@
 
       </section>
       {% endblock %}
-
+      </div>
       <footer class="footer">
           <div class="columns">
             <div class="column is-half">
